# OfficeToMD

./: .gitignore  Price Sheet Chat.docx  Price Sheet Chat.md  README.md  pyproject.toml
.codex/environments/: environment.toml
src/officetomd/: cli.py
