[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "docx2md"
version = "0.1.0"
description = "Simple DOCX to Markdown converter"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mammoth>=1.6.0",
  "markdownify>=0.13.1",
]

[project.scripts]
docx2md = "docx2md.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
