[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "officetomd"
version = "0.1.0"
description = "Office files to Markdown converter (currently DOCX only)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mammoth>=1.6.0",
  "markdownify>=0.13.1",
]

[project.scripts]
officetomd = "officetomd.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
